[gd_scene load_steps=23 format=3 uid="uid://wb1erjrh6bnd"]

[ext_resource type="Script" path="res://TurretMods/mod_visual_factory.gd" id="1_80rsx"]
[ext_resource type="Texture2D" uid="uid://chsgerkqrpoy6" path="res://Assets/Level/Backgrounddummy.png" id="1_wplut"]
[ext_resource type="Texture2D" uid="uid://cw36qv6rxfwpx" path="res://Assets/Effects/particles/scorch_03.png" id="2_sl62v"]
[ext_resource type="Script" path="res://TurretMods/mod_visual.gd" id="2_weiop"]
[ext_resource type="Script" path="res://TurretMods/visual_on_projectile.gd" id="3_g73qt"]
[ext_resource type="Texture2D" uid="uid://jobgij4i5sxe" path="res://Assets/Effects/Explosion_1/e1.png" id="4_y8l7j"]
[ext_resource type="Texture2D" uid="uid://cxkgl0lpk4xdv" path="res://Assets/Effects/Explosion_1/e7.png" id="5_wf3h1"]
[ext_resource type="Shader" path="res://TurretMods/cracked.gdshader" id="8_vuc2q"]
[ext_resource type="Texture2D" uid="uid://b8n0busmwromw" path="res://icon.svg" id="9_udwku"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_nwisb"]
as_normal_map = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_igy68"]
resource_local_to_scene = true
shader = ExtResource("8_vuc2q")
shader_parameter/dissolve_value = 0.746
shader_parameter/burn_size = 1.0
shader_parameter/ash_color = Color(0, 0, 0, 1)
shader_parameter/burn_color = Color(0.882, 0.777, 0.169, 1)
shader_parameter/proburn_color = Color(0.804, 0.2, 0.093, 1)
shader_parameter/dissolve_texture = SubResource("NoiseTexture2D_nwisb")

[sub_resource type="Curve" id="Curve_oy700"]
_data = [Vector2(0.0567686, 0.956044), 0.0, 0.0, 0, 0, Vector2(0.803493, 0.626374), 0.0, 0.0, 0, 0, Vector2(0.973799, 0.010989), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_k5had"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_1h15o"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_s0tqc"]
offsets = PackedFloat32Array(0, 0.103211, 0.316514, 0.658257, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 0.973814, 0.752688, 1, 1, 0.894118, 0, 1, 1, 0.45098, 0, 1, 0.468327, 1.10099e-06, 1.68458e-07, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_dtsgj"]
gradient = SubResource("Gradient_s0tqc")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gesnm"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 2.0
direction = Vector3(0, 0, 0)
initial_velocity_min = 8.12
initial_velocity_max = 36.58
gravity = Vector3(0, 0, 0)
scale_min = 2.0
scale_max = 4.0
color_ramp = SubResource("GradientTexture1D_dtsgj")

[sub_resource type="Gradient" id="Gradient_ip0ob"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(0.8, 0, 0, 0, 0.782057, 0, 0.165503, 1, 0.305882, 0.372549, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_j7rp6"]
gradient = SubResource("Gradient_ip0ob")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7a8oc"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(32, 32, 0)
angle_min = -720.0
angle_max = 720.0
spread = 180.0
initial_velocity_min = 10.0
initial_velocity_max = 25.0
orbit_velocity_min = -0.5
orbit_velocity_max = 0.5
gravity = Vector3(0, 0, 0)
scale_min = 0.0
scale_max = 0.05
color = Color(0.705882, 0, 0.305882, 1)
color_ramp = SubResource("GradientTexture1D_j7rp6")

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ys452"]
width = 50
height = 50
seamless = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iltuy"]
shader = ExtResource("8_vuc2q")
shader_parameter/dissolve_value = 0.642
shader_parameter/burn_size = 0.63
shader_parameter/ash_color = Color(0, 0, 0, 1)
shader_parameter/burn_color = Color(0.882, 0.777, 0.169, 1)
shader_parameter/proburn_color = Color(0.804, 0.2, 0.093, 1)
shader_parameter/dissolve_texture = SubResource("NoiseTexture2D_ys452")

[node name="mod_visual_factory" type="Node2D"]
script = ExtResource("1_80rsx")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color(0.396078, 0.396078, 0.396078, 1)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]

[node name="Sprite2D2" type="Sprite2D" parent="."]
z_index = -10
material = SubResource("ShaderMaterial_igy68")
position = Vector2(76, 1151)
scale = Vector2(19.475, 19.475)
texture = ExtResource("1_wplut")

[node name="template_visual" type="Node2D" parent="."]
z_index = 50
position = Vector2(-2, 2)
script = ExtResource("2_weiop")

[node name="on_projectile" type="Node2D" parent="template_visual"]
script = ExtResource("3_g73qt")

[node name="shiny" type="CPUParticles2D" parent="template_visual/on_projectile"]
process_mode = 3
modulate = Color(2, 2, 2, 1)
position = Vector2(4, -3)
emitting = false
amount = 20
randomness = 1.0
texture = ExtResource("4_y8l7j")
direction = Vector2(0, 1)
spread = 5.81
gravity = Vector2(0, 0)
initial_velocity_max = 30.05
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 0.01
scale_amount_max = 0.1
scale_amount_curve = SubResource("Curve_oy700")
color = Color(26.627, 1, 1, 1)
color_ramp = SubResource("Gradient_k5had")

[node name="smoke" type="CPUParticles2D" parent="template_visual/on_projectile"]
process_mode = 3
position = Vector2(3, -3)
emitting = false
amount = 22
lifetime = 1.5
randomness = 1.0
lifetime_randomness = 0.16
texture = ExtResource("5_wf3h1")
direction = Vector2(0, 1)
spread = 24.68
gravity = Vector2(0, 0)
initial_velocity_max = 30.05
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 0.01
scale_amount_max = 0.05
scale_amount_curve = SubResource("Curve_oy700")
color_ramp = SubResource("Gradient_1h15o")

[node name="on_shoot" type="GPUParticles2D" parent="template_visual"]
position = Vector2(2, -2)
emitting = false
amount = 80
process_material = SubResource("ParticleProcessMaterial_gesnm")
lifetime = 0.6
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2(0, 0, 4000, 4000)

[node name="on_hit" type="GPUParticles2D" parent="template_visual"]
position = Vector2(2, -1)
emitting = false
amount = 80
process_material = SubResource("ParticleProcessMaterial_gesnm")
lifetime = 0.6
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2(0, 0, 4000, 4000)

[node name="template_visual2" type="Node2D" parent="."]
z_index = 50
position = Vector2(-2, 2)
script = ExtResource("2_weiop")

[node name="idle" type="GPUParticles2D" parent="template_visual2"]
visible = false
modulate = Color(5, 1, 1, 1)
z_index = 10
amount = 10
process_material = SubResource("ParticleProcessMaterial_7a8oc")
texture = ExtResource("2_sl62v")
lifetime = 10.0
speed_scale = 0.5
randomness = 1.0

[node name="on_projectile" type="Node2D" parent="template_visual2"]
script = ExtResource("3_g73qt")

[node name="shiny" type="CPUParticles2D" parent="template_visual2/on_projectile"]
process_mode = 3
modulate = Color(2, 2, 2, 1)
position = Vector2(4, -3)
emitting = false
amount = 20
randomness = 1.0
texture = ExtResource("4_y8l7j")
direction = Vector2(0, 1)
spread = 5.81
gravity = Vector2(0, 0)
initial_velocity_max = 30.05
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 0.01
scale_amount_max = 0.1
scale_amount_curve = SubResource("Curve_oy700")
color = Color(26.627, 1, 1, 1)
color_ramp = SubResource("Gradient_k5had")

[node name="smoke" type="CPUParticles2D" parent="template_visual2/on_projectile"]
process_mode = 3
position = Vector2(3, -3)
emitting = false
amount = 22
lifetime = 1.5
randomness = 1.0
lifetime_randomness = 0.16
texture = ExtResource("5_wf3h1")
direction = Vector2(0, 1)
spread = 24.68
gravity = Vector2(0, 0)
initial_velocity_max = 30.05
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 0.01
scale_amount_max = 0.05
scale_amount_curve = SubResource("Curve_oy700")
color_ramp = SubResource("Gradient_1h15o")

[node name="on_shoot" type="GPUParticles2D" parent="template_visual2"]
position = Vector2(2, -2)
emitting = false
amount = 80
process_material = SubResource("ParticleProcessMaterial_gesnm")
lifetime = 0.6
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2(0, 0, 4000, 4000)

[node name="on_hit" type="GPUParticles2D" parent="template_visual2"]
position = Vector2(2, -1)
emitting = false
amount = 80
process_material = SubResource("ParticleProcessMaterial_gesnm")
lifetime = 0.6
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2(0, 0, 4000, 4000)

[node name="burning_projectile" type="Node2D" parent="."]
z_index = 50
position = Vector2(-2, 2)
script = ExtResource("2_weiop")

[node name="idle" type="GPUParticles2D" parent="burning_projectile"]
visible = false
modulate = Color(5, 1, 1, 1)
z_index = 10
amount = 10
process_material = SubResource("ParticleProcessMaterial_7a8oc")
texture = ExtResource("2_sl62v")
lifetime = 10.0
speed_scale = 0.5
randomness = 1.0

[node name="on_projectile" type="Node2D" parent="burning_projectile"]
script = ExtResource("3_g73qt")

[node name="shiny" type="CPUParticles2D" parent="burning_projectile/on_projectile"]
process_mode = 3
modulate = Color(2, 2, 2, 1)
position = Vector2(4, -3)
emitting = false
amount = 20
randomness = 1.0
texture = ExtResource("4_y8l7j")
direction = Vector2(0, 1)
spread = 5.81
gravity = Vector2(0, 0)
initial_velocity_max = 30.05
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 0.01
scale_amount_max = 0.1
scale_amount_curve = SubResource("Curve_oy700")
color = Color(26.627, 1, 1, 1)
color_ramp = SubResource("Gradient_k5had")

[node name="smoke" type="CPUParticles2D" parent="burning_projectile/on_projectile"]
process_mode = 3
position = Vector2(3, -3)
emitting = false
amount = 22
lifetime = 1.5
randomness = 1.0
lifetime_randomness = 0.16
texture = ExtResource("5_wf3h1")
direction = Vector2(0, 1)
spread = 24.68
gravity = Vector2(0, 0)
initial_velocity_max = 30.05
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 0.01
scale_amount_max = 0.05
scale_amount_curve = SubResource("Curve_oy700")
color_ramp = SubResource("Gradient_1h15o")

[node name="on_shoot" type="GPUParticles2D" parent="burning_projectile"]
position = Vector2(2, -2)
emitting = false
amount = 80
process_material = SubResource("ParticleProcessMaterial_gesnm")
lifetime = 0.6
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2(0, 0, 4000, 4000)

[node name="on_hit" type="GPUParticles2D" parent="burning_projectile"]
position = Vector2(2, -1)
emitting = false
amount = 80
process_material = SubResource("ParticleProcessMaterial_gesnm")
lifetime = 0.6
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2(0, 0, 4000, 4000)

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_iltuy")
texture = ExtResource("9_udwku")
